--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,12 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {},
+    "require": {
+        "php": ">=5.4.0"
+    },
     "autoload": {
         "psr-4": {
-            "App\\Calculator\\": "src/"
+            "kair4ik\\package\\": "src/"
         }
     }
 }
